--- a/index.html
+++ b/index.html
@@ -1,8 +1,145 @@
 <html>
-    <head>
-    <title>Benedict Revilla</title>
-    </head>
-    <body>
-    <h1>Rawr</h1>
-    </body>
+
+<head>
+    <title> BENEDICT N. REVILLA </title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="style.css">
+
+</head>
+
+<body>
+
+
+    <div class="container">
+        <div class="row">
+            <div id="left_col" class="col-3">
+                <br>
+
+                <a href="https://media.giphy.com/media/u7YEhhfif3m7u/giphy.gif">
+                    <img class="profilepic" src="rsz_1rsz_1rsz_profilepic.jpg">
+                </a>
+
+                <h1 class="position">BENEDICT N. REVILLA</h1>
+                <h2>De La Salle University</h2>
+                <br>
+                <h4>BS Industrial Management Engineering <br>Minor in Service Management</h4>
+                415 Kaze Bldg., Redwoods Condominium, Pasong Putik,<br> Novaliches, Quezon City, Metro Manila
+                <br>(02)990-1176
+                <br>+639321444458
+                <br>benedict_revilla@dlsu.edu.ph
+                <br>
+
+
+
+
+
+            </div>
+
+
+            <div class="col">
+
+                <br>
+                <h1>Benedict N. Revilla</h1>
+                <h5>benedict_revilla@dlsu.edu.ph</h5>
+
+                <br>
+                <br>
+                <h3>EDUCATION</h3>
+                <div class="row">
+                    <div class="col">
+                        2018 - PRESENT
+                    </div>
+                    <div class="col">
+                        DE LA SALLE UNIVERSITY: BS INDUSTRIAL MANAGEMENT ENGINEERING MINOR IN SERVICE MANAGEMENT
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        2012 - 2018
+                    </div>
+
+                    <div class="col">
+                        SCHOOL OF SAINT ANTHONY: ACADEMIC TRACK STEM
+                    </div>
+                </div>
+
+                <br>
+                <h3>WORK EXPERIENCE</h3>
+                <div class="row">
+                    <div class="col">
+                        2018
+                    </div>
+
+                    <div class="col">
+                        <h6>Work Immersion</h6> National Electrification Administration
+                    </div>
+
+                </div>
+                <br>
+
+
+                <br>
+                <h3>RESEARCH PAPERS PREPARED</h3>
+                <div class="row">
+                    <div class="col">
+                        2018
+                    </div>
+
+                    <div class="col">
+                        <h6>THE PHYTOREMEDIATION<br> POTENTIAL OF CARABAO<br> GRASS (<i>Paspalum conjugatum</i>)<br> TO LEAD (Pb) CONTAMINATED SOIL</h6>
+                    </div>
+                </div>
+
+                <br>
+
+                <br>
+                <h3>SEMINARS ATTENDED</h3>
+                <div class="row">
+                    <div class="col">
+                        2018
+                    </div>
+
+                    <div class="col"></div>
+                    <h6>The Greening:<br>DE LA SALLE <br> UNIVERSITY FRESHMEN FAIR <br> </h6>
+                </div>
+
+
+
+                <br>
+
+
+                <br>
+                <h3>PERSONAL BACKGROUND</h3>
+                <div class="row">
+                    <div class="col">
+                        BORN ON OCTOBER 18, 1999 <br>FLUENT IN ENGLISH & FILIPINO <br> KNOWLEDGEABLE IN MATH AND SCIENCE
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col">
+
+                    </div>
+                </div>
+
+                <br>
+
+                <br>
+                <h3>REFERENCES</h3>
+                <div class="row">
+                    <div class="col">
+                        RAMONCITO D. REVILLA <br>ELIZABETH N. REVILLA <br> WILLIAM RAYMOND N. REVILLA
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+</body>
+
 </html>
